# boost-polygon-operations

./: CMakeLists.txt  README.md  main.cc  polygon.h  polygon_visualizer.h
